Add clear all to api
